test/kind/wrong/type3.kk
type int
alias id<a> = a
alias wrong = id<int,int>